--- a/scss/components/_charts.scss
+++ b/scss/components/_charts.scss
@@ -1,9 +1,9 @@
 @use "../utilities" as *;
 
-#myChart,
-#daily-chart,
-#mobile-chart {
-  width: 320px;
-  height: 150px;
-  // outline: 1px solid red;
-}
+// #myChart,
+// #daily-chart,
+// #mobile-chart {
+//   width: 320px;
+//   height: 150px;
+//   // outline: 1px solid red;
+// }
