--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -2,10 +2,10 @@
 
 @media screen and (min-width: 768px) {
   .widget-container-full {
-    width: 91vw;
+    width: 90vw;
   }
   .widget-container-half {
-    width: 44vw;
+    width: 43vw;
   }
   .recent-karot {
     display: inline-block;
